# dirgal

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: cache.rs  cli.rs  config.rs  error.rs  hash.rs  image.rs  main.rs  path.rs  pipeline.rs  scan.rs  util.rs
src/ui/: actions.rs  cache.rs  gallery.rs  mod.rs  model.rs  state.rs  window.rs
src/ui/gallery/: constant.rs  mod.rs  render.rs
stubs/: default.config.toml
