[package]
name = "dirgal"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
authors = ["Zak Nesler"]
repository = "https://github.com/zaknesler/dirgal"
license = "MIT"

[dependencies]
directories = "6.0.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.32"
humansize = "2.1.3"
ignore = "0.4.27"
image = "0.25.10"
num-format = "0.4.4"
rust-embed = "8.11.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
natord = "1.0.9"

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
