[package]
name = "dirgal"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
authors = ["Zak Nesler"]
repository = "https://github.com/zaknesler/dirgal"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.32"
humansize = "2.1.3"
ignore = "0.4.27"
image = "0.25.10"
indicatif = { version = "0.18.6", features = ["rayon"] }
natord = "1.0.9"
num-format = "0.4.4"
rayon = "1"
rust-embed = "8.11.0"
schemars = "1.2.1"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# For some reason lsp-types doesn't compile at opt-level 3
[profile.dev.package.lsp-types]
opt-level = 2
[profile.release.package.lsp-types]
opt-level = 2
